# dredge-cli

./: Dockerfile  README.md  pyproject.toml  requirements.txt
dredge/: __init__.py  auth.py  cli.py  config.py
dredge/aws_ir/: __init__.py  forensics.py  hunt.py  models.py  response.py  services.py
dredge/gcp_ir/: __init__.py  config.py  hunt.py  models.py  services.py
dredge/github_ir/: __init__.py  config.py  hunt.py  models.py  services.py
tests/: conftest.py  test_cli_parsing.py  test_github_hunt_pagination.py  test_github_hunt_phrase.py  test_operation_result.py
